--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id='button-div'>
+        <button id='reset'>Reset</button>
+    </div>
     <div id='container'></div>
 </body>
